--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "devDependencies": {
     "concurrently": "^7.2.0",
     "css-loader": "^6.7.1",
+    "eslint-webpack-plugin": "^3.1.1",
     "html": "^1.0.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.6.4",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-middleware": "^5.3.3"
@@ -26,6 +29,8 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "lodash": "^4.17.21",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "phaser": "^3.55.2",
+    "phaser3-rex-plugins": "^1.1.69"
   }
 }
