feature: config @types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
 		"typeRoots": [
 			"node_modules/@types",
 			"node_module/phaser/types",
-            "src/types"
+            "@types",
 		],
 		"types": [
 			"phaser"
