--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.21",
     "nodemon": "^2.0.16",
     "phaser": "^3.55.2",
-    "phaser3-rex-plugins": "^1.1.69"
+    "phaser3-rex-plugins": "^1.1.69",
+    "socket.io": "^4.5.1"
   }
 }
