--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nodemon": "^2.0.16",
     "phaser": "^3.55.2",
     "phaser3-rex-plugins": "^1.1.69",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1"
   }
 }
