--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
+    "interactjs": "^1.10.14",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.16",
     "phaser": "^3.55.2",
