--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.11.7",
+    "@types/webpack": "^5.28.0",
     "concurrently": "^7.2.0",
     "css-loader": "^6.7.1",
     "eslint-webpack-plugin": "^3.1.1",
@@ -24,6 +26,7 @@
     "node-nightly": "^1.8.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
